# context-engineering-vs-prompt-engineering

./: AGENTS.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  storage.py
app/routers/: items.py
tests/: test_items.py
