[project]
name = "real-python-content-engineering"
version = "0.1.0"
description = "Minimal FastAPI Items service for context-engineering tutorials."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
